@@ -1,3 +1,7 @@
+2007-03-24  Claude Paroz  <claude@2xlibre.net>
+
+	* releases.py: Slightly modified language comparisons.
+
 2007-03-24  Abel Cheung  <abelcheung@gmail.com>
 
 	* translation-teams.xml.in: Fix some info for zh_CN team.
